package com.li.builder;

public interface Packing {

    String pack();
}
